syntax = "proto3";
package v1;

import "google/api/annotations.proto";

option go_package = "./v1";

message Customer {
    int32 TransactionID = 1;
    string CustomerName = 2;
    string Phone = 3;
    string Email = 4;
    string Product = 5;
}

// Service to manage list of todo tasks
service TransactionService {
    rpc CreateCustomer(CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/customer/customers"
            body: "*"
        };
    };

    rpc GetAllCustomer(ReadAllRequest) returns (ReadAllResponse) {
        option (google.api.http) = {
            get: "/customer/customers"
        };
    };

    rpc GetCustomerByProduct(ReadRequest) returns (ReadResponse) {
        option (google.api.http) = {
            get: "/customer/customers/{Product}"
        };
    };

    rpc UpdateCustomer(UpdateRequest) returns (UpdateResponse) {
        option (google.api.http) = {
            put: "/customer/customers/{CustomerName}"
            body: "*"
        };
    };

    rpc DeleteCustomer(DeleteRequest) returns (DeleteResponse) {
        option (google.api.http) = {
            delete: "/customer/customers/{Product}"
        };
    };
}

message CreateRequest {
    string api = 1;
    Customer customer = 2;
}

message CreateResponse {
    string api = 1;
    Customer customer = 2;
}

message ReadAllRequest {
    string api = 1;
}

message ReadAllResponse {
    string api = 1;
    repeated Customer customer = 2;
}

message ReadRequest {
    string api = 1;
    string Product = 2;
}

message ReadResponse {
    string api = 1;
    repeated Customer customer = 2;
}

message UpdateRequest {
    string api = 1;
    string CustomerName = 2;
}

message UpdateResponse {
    string api = 1;
}

message DeleteRequest {
    string api = 1;
    string Product = 2;
}

message DeleteResponse{
    // API versioning: it is my best practice to specify version explicitly
    string api = 1;
}